# Adopt-A-Doge

./: .gitignore  package-lock.json  package.json  tailwind.config.js
adoptcontract/: AADZeQZ3uHgsXi2j3rgkHunUFe6LaRMQeXkiKqr39Mot.json  Anchor.toml  package-lock.json
adoptcontract/programs/adoptcontract/: Cargo.toml
adoptcontract/programs/adoptcontract/src/: lib.rs
adoptcontract/tests/: adoptcontract.ts  initvault.ts  mintToPda.ts
components/: Navbar.tsx  Nftcard.tsx  Winners.tsx
components/styles/: animation.module.css
nextapp/: next.config.js  package-lock.json  package.json  tailwind.config.js
nextapp/.next/: trace
nextapp/.next/server/pages/: _app.js  _document.js  _error.js  home.js
nextapp/.next/static/chunks/: webpack.js
nextapp/.next/static/webpack/: webpack.06281bf6393f628c.hot-update.js  webpack.0b6d2a80b96c4859.hot-update.js  webpack.108c3a3b5895ce31.hot-update.js  webpack.10f67141e75ce46f.hot-update.js  webpack.151dca1e86355776.hot-update.js  webpack.1555fd458361cc2e.hot-update.js  webpack.1a078e1807dd1142.hot-update.js  (+53 more)
nextapp/components/: Navbar.tsx  Nftcard.tsx  SpendTickets.tsx  Winners.tsx
nextapp/context/: FetchNFT.tsx  Program.tsx  Wallet.tsx
nextapp/idl/: adoptcontract.json  adoptcontract.ts
nextapp/pages/: _app.tsx  index.tsx
nextapp/pages/about/: index.tsx
nextapp/pages/congrats/: index.tsx
nextapp/pages/home/: index.tsx
nextapp/pages/nfts/: index.tsx
nextapp/styles/: about.module.css  globals.css
pages/: index.tsx
pages/congrats/: index.tsx
pages/home/: index.tsx
pages/nfts/: index.tsx
(+88 files in other folders)
