[package]
name = "adoptcontract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adoptcontract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0"}
anchor-spl = { version = "0.27.0" }
mpl-token-metadata = { version = "1.13.0", features = ["no-entrypoint"] }
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"