[package]
name = "adoptcontract"
version = "0.1.0"
description = "Burn your scam NFTs to get Kenl raffle tickets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adoptcontract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
mpl-token-metadata = "3.0.1"
solana-program = "=1.14.17"
# winnow="=0.4.1"
# toml_datetime="=0.6.1"